修改请求方式

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
       "@models/*": ["web/models/*"],
       "@routes/*": ["web/routes/*"],
       "@pages/*": ["web/pages/*"],
-      "@tools/*": ["web/tools/*"]
+      "@tools/*": ["web/tools/*"],
+      "@types/*": ["web/types/*"]
     }
   },
   "include": ["src", "tests"],
